--- a/metadata.yml
+++ b/metadata.yml
@@ -10,7 +10,7 @@ date: 1903
 publisher: Leipzig F. A. Brockhaus.
 subject: [Kaschmir,Tibet,China]
 rights: |
-  <br/>Dieses Werk basiert auf dem Digitalisat von [archive.org](hhttps://archive.org/details/imherzenvonasien02hedi/page/n7/mode/2up) und ist Public Domain.
+  <br/>Dieses Werk basiert auf dem Digitalisat von [archive.org](https://archive.org/details/imherzenvonasien02hedi/page/n7/mode/2up) und ist Public Domain.
   <br /><br />Der [Urheber](https://de.wikipedia.org/wiki/Sven_Hedin) dieses Werks ist 1952 gestorben; es ist daher gemeinfrei,
   weil seine urheberrechtliche Schutzfrist abgelaufen ist.
   Dies gilt für das Herkunftsland des Werks und alle weiteren Staaten mit einer
